--- a/demand_server/templates/demand/estimates/demand_estimate_list.html
+++ b/demand_server/templates/demand/estimates/demand_estimate_list.html
@@ -27,7 +27,7 @@
                     <tr>
                         <td>{{ estimate.id }}</td>
                         <td>
-                            <a href="{% url 'estimate_detail'%}">{{ estimate.type }}</a>
+                            <a href="#">{{ estimate.type }}</a>
                         </td>
                         <td>{{ estimate.location }}</td>
                         <td>{{ estimate.status }}</td>
@@ -41,7 +41,7 @@
                     <!-- 임시 데이터 -->
                     <tr>
                         <td>1</td>
-                        <td><a href="{% url 'estimate_detail'%}">실내 공기질</a></td>
+                        <td><a href="#">실내 공기질</a></td>
                         <td>서울 강남</td>
                         <td>진행중</td>
                         <td>5</td>
